# Icon-Generator

./: .gitignore  README.md  pyproject.toml
icon_generator/: app.py  controller.py  response.html  video-notes.py
resources/: styles.qss
tests/: test_controller.py
