[tool.poetry]
name = "icon-generator"
version = "0.1.0"
description = ""
authors = ["Hundredvisionsguy <winikkc@hsd.k12.or.us>"]
readme = "README.md"
packages = [{include = "icon_generator"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
requests = "*"
PySide6 = "*"
file-clerk = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
